tests/fail_cases/derive_from_struct.rs
use unit_enum::UnitEnum;

#[derive(UnitEnum)]
struct Vec2 {
    x: i32,
    y: i32,
}

fn main() {}
